updated g14n.info urls

--- a/lib/Task/BeLike/FIBO.pod
+++ b/lib/Task/BeLike/FIBO.pod
@@ -159,7 +159,7 @@ Makefile.PL
         META_MERGE => {
           resources => {
             homepage   => 'https://metacpan.org/pod/My::Package'
-            license    => 'http://www.g14n.info/mit-license',
+            license    => 'http://g14n.info/mit-license',
             repository => 'http://github.com/fibo/My-Package-pm',
             bugtracker => 'http://github.com/fibo/My-Package-pm/issues',
         },
@@ -200,7 +200,7 @@ MANIFEST.SKIP
 
 L<CPAN>
 
-See how to setup L<A CPAN client that works like a charm|http://www.g14n.info/2014/03/a-cpan-client-that-works-like-charm.html>.
+See how to setup L<A CPAN client that works like a charm|http://g14n.info/2014/03/a-cpan-client-that-works-like-charm>.
 
 =item *
 
@@ -212,7 +212,7 @@ L<Perl::Tidy>
 
 Use L<Perl::Tidy> defaults. Do not indent every source file automatically, indent by hand and use your creativity.
 
-See Perl section in L<My Vim preferences|http://www.g14n.info/2013/07/my-vim-configuration.html#perl> to see how you can use L<perltidy> with Vim.
+See Perl section in L<My Vim preferences|http://g14n.info/2013/07/my-vim-configuration#perl> to see how you can use L<perltidy> with Vim.
 
 =item *
 
