added wget commands

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-2015-14-01 v0.14
+2015-02-03 v0.15
++ Added commands to download file samples
+
+2015-01-14 v0.14
 + Added modules to enable cpan client history
 
 2014-12-29 v0.12
