added steps in workflow

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+2015-0x-xx v0.17.1
++ Minor improvements in documentation
+
 2015-04-24 v0.17
 + Added test coverage instructions
 + Added how to use GitHub Pages
