--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 2015-0x-xx v0.18
++ Added App::Ack
 + Added scaffolding script
 + Minor improvements in documentation
 + Code coverage report with syntax highlight
