--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+
+0.19 2015-xx-xx
++ Exclude *.ERR files form dist, e.g. perltidy.ERR
+
 0.18 2015-05-14
 + Changed Changes format
 + Added App::Ack
