--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 
-0.19 2015-xx-xx
+0.19 2015-0x-xx
++ scaffonding script replaces files in place
 + Updated travis to Perl v5.22
 + I prefer MINOR_PERL_VERSION 5.12.0
 + Exclude *.ERR files form dist, e.g. perltidy.ERR
